# ndex-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  notion_blocks.jsonl  sample.json
.github/workflows/: build_image.yml  docker-build.yml  eb_deploy_staging.yml  ec2-deploy.yml  rust.yml
migrations/: 20230426040209_user_schema.sql  20230426215656_users.sql  20230524025213_user-confirmation-fields.sql
src/: app_state.rs  lib.rs  main.rs  router.rs
src/models/: gcalendar.rs  gdrive.rs  gevents.rs  gmail.rs  integration.rs  integrations.rs  mod.rs  user.rs
src/routes/: mod.rs
src/routes/google/: auth.rs  calendar.rs  drive.rs  mail.rs  mod.rs  retrieve_calendar.rs  retrieve_mail.rs  user.rs
src/routes/login/: google_auth.rs  mod.rs  notion_auth.rs
src/routes/notion/: auth.rs  block_models.rs  create_row.rs  index.rs  mod.rs  retrieve_blocks.rs  search.rs
src/routes/typesense/: batch_index.rs  create_schema.rs  index.rs  mod.rs  schema_control.rs
src/routes/user/: create_schema.rs  integrations.rs  login.rs  migrate.rs  mod.rs  signup.rs
src/utilities/: email.rs  errors.rs  mod.rs  token_wrapper.rs  ts_schemas.rs
