[package]
name = "mentat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["macros", "headers"] }
chrono = "0.4.23"
dotenv = "0.15.0"
http = "0.2.8"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde-jsonlines = "0.4.0"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio ={version = "1.25.0", features = ["full"]}
