[package]
name = "ndex-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.4.0", features = ["cors", "add-extension"] }
anyhow = "1.0.70"
axum = { version = "0.6.4", features = ["macros", "headers"] }
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.26"
http = "0.2.8"
oauth2 = "4.3.0"
reqwest = { version = "0.11.18", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_derive = "1.0.152"
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
    "chrono",
] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.4"
tower = "0.4.13"
tower-service = "0.3.2"
url = "2.3.1"
openssl = "0.10.41"
postgres-openssl = "0.5.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
validator = "0.16.0"
validator_derive = "0.16.0"
lettre = "0.10"
async-recursion = "1.0.4"
